# setsugene

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  clion-style.xml  compile_commands.json  generate_vulkan_format_map.ipynb  usage.sh  vcpkg-configuration.json
engine/: CMakeLists.txt
engine/cmake/: AssetsTarget.cmake  EngineTarget.cmake  EngineVariables.cmake  ShaderTarget.cmake
engine/include/setsugen/: alias.h  application.h  camera.h  chrono.h  cli.h  clock.h  component.h  conf.h  configuration.h  context.h  display.h  engine.h  entity.h  exception.h  executor.h  format.h  gfx.h  input.h  logger.h  macros.h  math.h  mesh.h  pch.h  platform.h  plug.h  preprocessor.h  refl.h  resource.h  scene.h  scripting.h  serde.h  states.h  system.h  thislib.h  transform.h  types.h  utilities.h  version.h  window.h  wm.h
engine/include/setsugen/__impl__/application/: app_application.inl  app_fwd.inl
engine/include/setsugen/__impl__/chrono/: calendar_decl.inl  chrono_fwd.inl  date_decl.inl  date_impl.inl  duration_decl.inl  duration_impl.inl  timepoint_decl.inl  timepoint_impl.inl
engine/include/setsugen/__impl__/cli/: cli_command-desc.inl  cli_command-desc_argdesc.inl  cli_fwd.inl  (+6 more)
engine/src/: application_base.cpp  application_basic-app.cpp  application_basic-app.h  application_builder.cpp  clock-duration.cpp  clock-timepoint.cpp  clock-units.h  component_camera.cpp  component_camera_perspective.cpp  component_mesh.cpp  component_mesh_meshdata.cpp  component_transform.cpp  configuration.cpp  configuration_source-yaml.cpp  configuration_source-yaml.h  entity.cpp  exception.cpp  executor_fixed-tp.cpp  executor_platform-utilities.cpp  executor_single-tp.cpp  format.cpp  format_args-store.cpp  format_formatter.cpp  format_impl.h  gfx_renderer.h  gfx_renderer_buffer.cpp  gfx_renderer_builder.cpp  gfx_renderer_mesh-buffer.cpp  gfx_renderer_render-pass.cpp  gfx_renderer_vulkan-app.cpp  gfx_renderer_vulkan-renderer.cpp  gfx_renderer_vulkan-shader.cpp  gfx_renderer_window-target.cpp  library.cpp  library.h  log_appender-console.cpp  log_appender.cpp  log_appender_mapping.cpp  logger.cpp  logger_factory.cpp  (+13 more)
engine/src/application/: application_app.cpp  application_base.cpp  application_basic-app.h  application_builder.cpp
engine/src/chrono/: chrono_calendar_gregorian.cpp  chrono_date.cpp  chrono_duration.cpp  chrono_timepoint.cpp
engine/src/cli/: cli_argument.cpp  cli_command.cpp  cli_execution-data.cpp
engine/src/configuration/: conf_configuration-data.cpp  conf_configuration-file.cpp  conf_configuration-loader.cpp  conf_configuration-source.cpp  conf_source-serialized.cpp
engine/src/context/: context_app-context.cpp  context_ecs-context.cpp  context_render-context.cpp
engine/src/ecs/component/: component.cpp  component_mesh.cpp  component_mesh_meshdata.cpp  component_scripting.cpp  component_transform.cpp
engine/src/ecs/entty/: entity.cpp
engine/src/ecs/scene/: scene.cpp  scene_manager.cpp
engine/src/executor/: executor_fixed-tp.cpp  executor_platform-utilities.cpp  executor_platform-utilities.h  executor_single-tp.cpp
engine/src/formatter/: format_args-store.cpp  format_argsdesc.cpp  format_argsstore.cpp  format_formatter.cpp
engine/src/gfx/: gfx_renderer-base.cpp
engine/src/gfx/vulkan/: gfx_renderer.h  gfx_renderer_builder.cpp  gfx_renderer_command-pool.cpp  gfx_renderer_descriptor-pool.cpp  gfx_renderer_gfx-pipeline.cpp  gfx_renderer_vulkan-app.cpp  gfx_renderer_vulkan-renderer.cpp  gfx_renderer_vulkan-shader.cpp  gfx_renderer_window-target.cpp
engine/src/loader/: library.cpp  library.h
engine/src/logger/: log_appender-console.cpp  log_appender.cpp  log_appender_mapping.cpp  logger.cpp  logger_factory.cpp
engine/src/math/: math_angle.cpp  math_matrices-impl.cpp  math_matrices.cpp  math_vertors-impl.cpp  math_vertors.cpp
engine/src/plug/: plug.cpp  plug_manager.cpp
engine/src/reflection/: reflection_refl-field.cpp
engine/src/serde/: serde_serialized-data.cpp
engine/src/serde/format/: serd_ffm-yaml.cpp  serde_ffm-json.cpp  serde_ffm-json.h  serde_ffm-yaml.h
engine/src/serde/types/: serde_ds-type-array.cpp  serde_ds-type-bool.cpp  serde_ds-type-float.cpp  serde_ds-type-int.cpp  serde_ds-type-null.cpp  serde_ds-type-obj.cpp  serde_ds-type-string.cpp
engine/src/states/: state_app-state.cpp  states_app-state.cpp  states_renderer-state.cpp  states_state-machine.cpp
engine/src/states/app-state/: states_app-state_destroy.cpp  states_app-state_frame-begin.cpp  states_app-state_frame-end.cpp  states_app-state_initalize.cpp  states_app-state_pause.cpp  states_app-state_ready.cpp  states_app-state_resume.cpp  states_app-state_signal-handle.cpp  states_app-state_start.cpp  states_app-state_stop.cpp  states_app-state_wait-render.cpp
engine/src/states/render-state/: states_renderer-state_block-ecs.cpp  states_renderer-state_create-pipeline.cpp  states_renderer-state_create-target.cpp  states_renderer-state_destroy-pipeline.cpp  states_renderer-state_destroy-target.cpp  states_renderer-state_destroy.cpp  states_renderer-state_frame-begin.cpp  states_renderer-state_frame-end.cpp  states_renderer-state_initialize.cpp  states_renderer-state_perform-pipeline.cpp  states_renderer-state_ready.cpp  states_renderer-state_signal-handle.cpp  states_renderer-state_start.cpp  states_renderer-state_stop.cpp  states_renderer-state_validate-pipeline.cpp  states_renderer-state_wait-ecs.cpp  states_renderer-state_wait-frame-begin.cpp  states_renderer-states_perform-pipeline.cpp
engine/src/utils/: version.cpp
engine/src/wm/: window.cpp  window_command-queue.cpp  window_helper.h  window_helper_glfw-instance.cpp  wm_manager-base.cpp  wm_window-base.cpp
engine/src/wm/glfw/: glfw_window-manager.cpp  glfw_window-manager.h  glfw_window.cpp  glfw_window.h
engine/test/: CMakeLists.txt  math.cpp
engine/tests/: CMakeLists.txt  test.hpp
engine/tests/chrono/: date.cpp
engine/tests/math/: matrix.cpp  vectors.cpp
engine/tests/refl/: reflection.cpp
engine/tests/serde/: json.cpp  serialized_data.cpp
(+132 files in other folders)
